cluster/system/longhorn-system/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "database"
    hajimari.io/appName: "Longhorn"
    hajimari.io/group: "System"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "longhorn.${DOMAIN}"
      secretName: "longhorn-tls"
  rules:
    - host: "longhorn.${DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
